# krx_prediction_back

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 08f394104395_init.py  41b4cb1173ed_init.py  593ec47ecdc0_init.py  7a1812ce6ead_init.py  b047c22300c8_init.py  b42400b5ba96_create_news_score_table.py  c83262b5af5c_delete_not_nullable_in_news_score_table.py  f5e7ab8dcc7e_init.py  f96f84238edb_init.py
app/: .env  main.py
app/api/: deps.py
app/api/v1/: routers.py
app/api/v1/endpoints/: krx.py
app/core/: config.py
app/db/: mongo.py  session.py
app/models/: krx.py
app/schemas/: krx.py
